fix: keep de-emphasized element contrast
Lowering the contrast of a de-emphasized element worked well, but it
made it impossible to tell the state of a checkbox in the file
properties. Keeping the contrast is probably best.

--- a/src/tweaks.css
+++ b/src/tweaks.css
@@ -8,8 +8,8 @@
 /* Grayscale and lower the contrast of file properties and embedded backlinks when not hovered */
 .embedded-backlinks,
 .metadata-container {
-  filter: grayscale(100%) contrast(0);
-  opacity: 0.35;
+  filter: grayscale(1);
+  opacity: 0.3;
   transition:
     filter 0.3s ease,
     opacity 0.3s ease;
@@ -19,7 +19,7 @@
 .embedded-backlinks:focus-within,
 .metadata-container:hover,
 .metadata-container:focus-within {
-  filter: grayscale(0) contrast(1);
+  filter: grayscale(0);
   opacity: 1;
 }
 
