--- a/theme.css
+++ b/theme.css
@@ -414,8 +414,8 @@ body {
 /* Grayscale and lower the contrast of file properties and embedded backlinks when not hovered */
 .embedded-backlinks,
 .metadata-container {
-  filter: grayscale(100%) contrast(0);
-  opacity: 0.35;
+  filter: grayscale(1);
+  opacity: 0.3;
   transition:
     filter 0.3s ease,
     opacity 0.3s ease;
@@ -425,7 +425,7 @@ body {
 .embedded-backlinks:focus-within,
 .metadata-container:hover,
 .metadata-container:focus-within {
-  filter: grayscale(0) contrast(1);
+  filter: grayscale(0);
   opacity: 1;
 }
 
